examples/neg/TernaerOper-Neg2.iml
// unequal branching types
program ternaereOperatorNeg()
do
  debugout true ? false : 2
endprogram